<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Assignment - David McQueen</string>
    <string name="hello_world">David McQueen</string>
    <string name="menu_settings">Settings</string>
    <string name="newEvent_txtEvent">Event</string>
    <string name="newEvent_txtDescription">Description</string>
    <string name="newEvent_titleHint">Event title</string>
    <string name="newEvent_descriptionHint">Event description</string>
    <string name="newEvent_txtSave">Save</string>
    <string name="menu_str_add">Add Event</string>
    <string name="menu_str_settings">Settings</string>
    <string name="menu_str_edit">Edit</string>
    <string name="menu_str_delete">Delete</string>
    <string name="menu_share_facebook">Share: Facebook</string>
    <string name="menu_share_twitter">Share: Twitter</string>
    <string name="txt_date">Date</string>
    <string name="newEvent_txtTime">Time</string>
    <string name="newEvent_checkLocation">Include Location</string>
    <string name="newEvent_txtLocation">Location</string>
    <string name="menu_str_deleteAll">Delete All</string>
    <string name="title_activity_settings">Settings</string>
    <string name="prefs_userName">UserName</string>
    <string name="newEvent_txtGetLocation">Get Location</string>
    <string name="NewEvent_txtMap">Map View</string>
    <string name="app_id">486436144739370</string>
    <string name="menu_sync">Sync</string>
    <string name="welcome">Welcome!</string>
    <string name="whatsNew">To get started please select some default options to use in this app.</string>
    <string name="noEvents">No curent events</string>
    <string name="noEventsAvaliable">There are currently no events in the database. Please add a new event</string>
    <string name="toastMakingDirectory">Making Directory</string>
    <string name="toastNoCamera">No Camera Found</string>
    <string name="toastFillAllFields">Please fill in all fields</string>
    <string name="toastEventSaved">New Event Saved</string>
    <string name="toastImageSaved">Image Saved</string>
    <string name="stringHello">Hello</string>
    <string name="toastSuccessfullyPosted">Successfully Posted</string>
    <string name="toastSync">Syncing….</string>

</resources>