<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:fillViewport="false"
    android:background="@color/Gray"
    android:isScrollContainer="true" >

<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newEvent_txtEvent" />

    <EditText
        android:id="@+id/newEvent_editEventName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/newEvent_titleHint" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newEvent_txtDescription" />

    <EditText
        android:id="@+id/newEvent_editDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/newEvent_descriptionHint"
        android:inputType="textMultiLine" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_date" />

    <EditText
        android:id="@+id/newEvent_txtDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newEvent_txtTime" />

    <EditText
        android:id="@+id/newEvent_txtTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="time" />

    <CheckBox
        android:id="@+id/newEvent_checkLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newEvent_checkLocation" />

    <TextView
        android:id="@+id/newEvent_tagLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newEvent_txtLocation" />

    <EditText
        android:id="@+id/newEvent_txtLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:focusable="false"
        android:visibility="visible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/newEvent_btnGetLocation"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newEvent_txtGetLocation" />

        <Button
            android:id="@+id/newEvent_btnshowMap"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NewEvent_txtMap" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/newEvent_btnSave"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/newEvent_txtSave" />

        <ImageButton
            android:id="@+id/newEvent_btnCamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/camera" />

    </LinearLayout>

    <ImageView
        android:id="@+id/newEvent_Image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
        
</LinearLayout>
</ScrollView>